# zoo

./: .gitignore  .travis.yml  ChangeLog.md  List  Makefile.am  README.md  addbfcrc.c  addbftcc.c  addfname.c  ar.h  asmconst.ai  assert.h  basename.c  bilf.c  comment.c  configure.ac  decode.c  encode.c  errors.i  fiz  generic.c  getfile.c  huf.c  indent.sh  linux.c  lzc.asm  lzc.c  lzconst.h  lzd.asm  lzh.c  machine.c  machine.h  makefile  makelist.c  maketbl.c  maketree.c  misc.c  misc2.c  msdos.c  mstime.i  (+28 more)
.github/workflows/: build.yml
debian/: .gitignore  changelog  control  copyright  rules  unzoo.install  zoo.install
debian/source/: lintian-overrides
doc/: Install  List  TODO  descrip.mms  makefile  makefile.tcc  options.txt  public-domain.eml  zoo.man
man/: Makefile.am  fiz.1  unzoo.1  zoo.1
src/: .gitignore  Makefile.am  addbfcrc.c  addfname.c  ar.h  basename.c  bilf.c  bsd.c  comment.c  crcdefs.c  debug.h  encode.c  errors.h  fiz.c  generic.c  getfile.c  huf.c  io.c  linux.c  lzc.c  lzd.c  lzh.c  lzh.h  machine.c  macros.ai  makelist.c  misc.c  misc2.c  msdos.c  mstime.i  needed.c  nextfile.c  nixmode.i  nixtime.i  options.c  options.h  parse.c  portable.c  portable.h  prterror.c  (+17 more)
test/: Makefile.am  basic.sh  creation-time.sh  lib.sh  long-filenames.sh  memcheck.sh
